# Voxel

./: .gitignore  CMakeLists.txt  Globals.hpp  README.md  conf.hpp  configuration.hpp  main.cpp
Components/: Chunk.cpp  Chunk.hpp  ChunkHelper.cpp  ChunkHelper.hpp  DynamicPixels.cpp  PIxel.cpp  Pixel.cpp  Pixel.hpp  StaticPixels.cpp  Tile.hpp
Core/: Core.cpp  Core.hpp  Map.cpp  Map.hpp  chunkHandling.cpp  inputs.cpp  shaders.cpp
Perlin/: PerlinNoise.hpp
Shaders/: assemble.frag  boxblur.frag  luminescence.frag  multiply.frag  pixelate.vert  pixelateHex.vert  test.vert
utils/: ThreadPool.cpp  ThreadPool.hpp
